# hs-gen-storable

./: LICENSE  README.md  gen-storable.cabal
examples/: bitfields.c  typelib.c
src/: Combinators.hs  DSL.hs  GenStorable.hs  GenTable.hs  Ty.hs  Utils.hs
