Name:                gen-storable
Version:             0.2.1
Synopsis:            Generate code to interface with C memory representation.
Description:
      Code generator to interface with C stuff.
      .
      Generate types with instance of Storable to deal with pointer from memory representation.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Category:            Development
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-gen-storable
Cabal-Version:       >=1.6
data-files:          README.md

Executable           hs-gen-storable
  Main-Is:           GenStorable.hs
  ghc-options:       -Wall -fno-warn-missing-signatures
  Hs-Source-Dirs:    src
  Build-depends:     base >= 4 && < 5
                   , mtl
                   , containers
                   , bytestring
                   , parsec
                   , haskell-src-exts

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-gen-storable
